<resources>
    <string name="app_name">Arabic Reader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">arabicreader.copticchurchlibrary.org</string>
    <string name="season">Season</string>
    <string name="united">Euercumvwnin qwn oua~gap/ m~m/i n~euaggelik/</string>
    <string name="greatfast">Great Fast Hymns + Responses</string>
    <string name="resurrection">Holy Resurrection Hymns + Responses</string>
    <string name="standard_hymns">Standard Hymns + Responses</string>

    <string name="standard_responses">Standard Deacon Responses</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
