<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/season">
        <menu>
        <item
            android:id="@+id/standard_hymns"
            android:title="@string/standard_hymns" />
        <item
            android:id="@+id/standard_responses"
            android:title="@string/standard_responses" />

            <item
                android:id="@+id/great_fast"
                android:title="@string/greatfast" />
            <item
                android:id="@+id/resurrection"
                android:title="@string/resurrection"/>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools"
                android:visible="false" />
        </menu>
    </item>

    <item
        android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
